# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: chip8.cpp  chip8.hpp  main.cpp  platform.cpp  platform.hpp
